prevent learning schedules form labels from wrapping

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -7658,6 +7658,7 @@ body.interface-english .publishBox .react-tags__suggestions ul {
 }
 .scheduleForm .label {
   font-weight: bold;
+  white-space: nowrap;
 }
 .scheduleForm div.scheduleDescription {
   color: var(--dark-grey);
